<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MathGame</string>
    <string name="action_settings">Settings</string>
    <string name="newGameButtonLabel">New Game</string>
    <string name="highScoresButtonLabel">View High Scores</string>
    <string name="title_activity_intro_fragment">IntroFragment</string>
    <string name="title_activity_select_game_fragment">SelectGameFragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="userNameLabel">User Name:</string>
    <string name="userName">Guest</string>
    <string name="addButtonLabel">+</string>
    <string name="subtractButtonLabel">-</string>
    <string name="multiplyButtonLabel">x</string>
    <string name="divideButtonLabel">÷</string>
    <string name="mainmenu_settings">Return To Main Menu</string>
    <string name="title_activity_add_fragment">AddFragment</string>
    <string name="timer">00.00</string>
    <string name="timerLabel">Time Left =</string>
    <string name="mathQuestion">Default Math Addition (+) Question</string>
    <string name="optionA">Default Option A</string>
    <string name="optionB">Default Option B</string>
    <string name="optionC">Default Option C</string>
    <string name="optionD">Default Option D</string>
    <string name="title_activity_reveal_score_fragment">RevealScoreFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="congrats">Congratulations</string>
    <string name="userScoreLabel">"Your Score - "</string>
    <string name="userScore">0</string>
    <string name="correctAnswersLabel">- Correct Answers</string>
    <string name="wrongAnswersLabel">- Wrong Answers</string>
    <string name="correctAnswers">0</string>
    <string name="wrongAnswers">0</string>
    <string name="highScore">New High Score</string>
    <string name="highScoreTableTop5Title">Top 5 High Scores</string>
    <string name="highScoreTableTitle">Top High Scores</string>
    <string name="resetHighScoresButtonLabel">Reset High Scores</string>

    <string name="themetype_title">Theme Preferences</string>
    <string name="themetype_summary">Select the programs theme</string>
    <string name="themetype_default">0</string>
    
    <string-array name="themetype_keys">
    	<item>Default</item>
    	<item>Blue Theme</item>
    	<item>Black Theme</item>    
    </string-array>
    
    <string-array name="themetype_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    
</resources>