<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bgomes.mathgame.AddQuestionFragment" >

    <TextView
        android:id="@+id/timerLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="14dp"
        android:text="@string/timerLabel"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/timerLabelTextView"
        android:layout_alignBottom="@+id/timerLabelTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/timer"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mathQuestionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timerLabelTextView"
        android:layout_below="@+id/timerLabelTextView"
        android:layout_marginTop="28dp"
        android:text="@string/mathQuestion" />

    <Button
        android:id="@+id/choiceAButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mathQuestionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/optionA" />

    <Button
        android:id="@+id/choiceDButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/choiceCButton"
        android:layout_below="@+id/choiceCButton"
        android:layout_marginTop="20dp"
        android:text="@string/optionD" />

    <Button
        android:id="@+id/choiceCButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/choiceBButton"
        android:layout_below="@+id/choiceBButton"
        android:layout_marginTop="20dp"
        android:text="@string/optionC" />

    <Button
        android:id="@+id/choiceBButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/choiceAButton"
        android:layout_below="@+id/choiceAButton"
        android:layout_marginTop="20dp"
        android:text="@string/optionB" />

</RelativeLayout>